# ParallelComputingUNAL

./: .gitignore  CMakeLists.txt  LICENSE  PIFork.c  PIFork.cpp  README.md
Matrix/: MatrixCUDA.cu  MatrixFork.c  MatrixOpenMP.c  MatrixThreads.c
Matrix/plot/: Threads.sh  run.sh
PI/: PIFork.c  PIFork.cpp  PIOpenMP.c  PIOpenMPFalseSharing.c  PIThreads.c  PIThreads.cpp
PI/FinalExam/: common.h
PI/FinalExam/GaussLegendre/: Sequential.c
PI/FinalExam/Leibniz/: CUDA.cu  OMP.c  Sequential.c
PI/FinalExam/Montecarlo/: CUDA.cu  OMP.c
